\App\Controller\ServiceJobController::connect

--- a/templates/index/jobs.html.twig
+++ b/templates/index/jobs.html.twig
@@ -97,7 +97,7 @@
                                         <a href="{{ path('service-job.connect', {
                                             'connectionId': service.id,
                                             'commandType': service_command.type
-                                        }) }}"
+                                        }) }}?redirect=jobs"
                                            class="btn btn-info btn-sm">connect</a>
                                     </div>
 
