--- a/templates/service_command/jobs.report.html.twig
+++ b/templates/service_command/jobs.report.html.twig
@@ -21,24 +21,26 @@
     </div>
     <div class="row">
         {% for job in jobs %}
-            <div class="col-md-6">
-                <div class="card card-{{job.status}}">
-                    <div class="card-header">
-                        <h3 class="card-title">#{{ job.id }} {{ job.connection.name }} - {{ job.connection.ip }}</h3>
-                        <div class="card-tools">
-                            <div class="btn-group">
-                                <a href="{{ path('service-job.ready-to-run', {'id': job.id}) }}"
-                                   class="btn btn-{{job.status}} btn-sm">Ready to run</a>
-                                <a href="{{ path('service-job.run', {'id': job.id}) }}"
-                                   class="btn btn-{{job.status}} btn-sm">Run</a>
+            {% for report in job.reports %}
+                <div class="col-md-6">
+                    <div class="card card-{{job.status}}">
+                        <div class="card-header">
+                            <h3 class="card-title">#{{ job.id }}-{{report.id}} {{ job.connection.name }} - {{ job.connection.ip }}</h3>
+                            <div class="card-tools">
+                                <div class="btn-group">
+                                    <a href="{{ path('service-job.ready-to-run', {'id': job.id}) }}"
+                                       class="btn btn-{{job.status}} btn-sm">Ready to run</a>
+                                    <a href="{{ path('service-job.run', {'id': job.id}) }}"
+                                       class="btn btn-{{job.status}} btn-sm">Run</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-body">
-                        <pre>{{ job.result }}</pre>
+                        <div class="card-body">
+                            <pre>{{ report.result }}</pre>
+                        </div>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         {% endfor %}
     </div>
 {% endblock %}
