jobs.html.twig jobs.report.html.twig

--- a/templates/index/jobs.html.twig
+++ b/templates/index/jobs.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}Список комманд сервиса #{{ service.id }} {% endblock %}
+{% block title %}Список комманд сервиса #{{ service.id }} {{ service.name }} [{{ service.ip }}]  {% endblock %}
 
 {% block page_content %}
 
