--- a/templates/service_command/jobs.report.html.twig
+++ b/templates/service_command/jobs.report.html.twig
@@ -41,6 +41,7 @@
                             </div>
                         </div>
                         <div class="card-body">
+                            <div>{{ report.command }}</div>
                             <pre style="max-height: 600px; overflow: scroll">{{ report.result }}</pre>
                         </div>
                     </div>
